--- a/index.html
+++ b/index.html
@@ -3,19 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <title>Theta Delta Gamma Fraternity</title>
-    <meta name="description" content="Ang Theta Delta Gamma Fraternity ay isang independent Greek-letter fraternity na itinatag noong Abril 24, 2020 na nagtataguyod ng pagkakapatiran, respeto, at pag kakaisa.">
-    <!-- Link sa external CSS -->
+    <meta name="description" content="Ang Theta Delta Gamma Fraternity ay isang independent Greek-letter fraternity na itinatag noong Abril 24, 2020 na nagtataguyod ng pagkakapatiran, respeto, at pagkakaisa.">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
+
+        <!-- LOGO / IMAGE -->
+        <img src="Gamma.jpg" alt="Theta Delta Gamma Logo" class="logo">
+
         <h1>Theta Delta Gamma Fraternity</h1>
         <h3>ΘΔΓ</h3>
 
         <p><strong>Itinatag:</strong> Abril 24, 2020</p>
         <p><strong>Mga Nagtatag:</strong> Lawrence Esplana at John Jovi Cordoves</p>
 
-        <h2>Bisyon</h2>
+        <h2>Ambisyon</h2>
         <p>
             Bumuo ng isang matibay na pagkakapatiran na nakabatay sa respeto,
             disiplina, at paglilingkod sa kapwa.
@@ -23,8 +27,8 @@
 
         <h2>Misyon</h2>
         <p>
-            Hubugin ang mga kasapi bilang responsableng indibidwal sa pamamagitan ng
-            pamumuno, pagkakaisa, at positibong pakikilahok sa komunidad.
+            Pagtibayin ang bawat kasapi bilang responsableng indibidwal sa pamamagitan ng
+         mabuting pamumuno, pagkakaisa, at aktibong pakikilahok sa kapatiran.
         </p>
 
         <h2>Mga Pinahahalagahan</h2>
@@ -33,12 +37,11 @@
             <li>Respeto</li>
             <li>Disiplina</li>
             <li>Determinasyon</li>
+            <li>Pagkakaisa</li>
         </ul>
 
-    
-
         <div class="footer">
-            &copy; 2026 Theta Delta Gamma Fraternity. Lahat ng karapatan ay nakalaan.
+            &copy; 2026 Theta Delta Gamma Fraternity.
         </div>
     </div>
 </body>
