--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
 
         <!-- LOGO / IMAGE -->
-        <img src="Gamma.jpg" alt="Theta Delta Gamma Logo" class="logo">
+        <img src="TDG_logo.jpg" alt="Theta Delta Gamma Logo" class="logo">
 
         <h1>Theta Delta Gamma Fraternity</h1>
         <h3>ΘΔΓ</h3>
