--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
         </ul>
 
         <div class="footer">
-            &copy; 2026 Theta Delta Gamma Fraternity.
+            &copy;  Theta Delta Gamma Fraternity
+            <br>
+            &copy;      Jaunary 11 2026
         </div>
     </div>
 </body>
